# TsimCAT

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_DEV.md  log.txt  main.cpp  vcpkg.json
.github/: copilot-instructions.md
config/: runtime.json
samples/: CMakeLists.txt  format_sample.cpp  generator_sample.cpp  task_sample.cpp
src/: CMakeLists.txt  main.cpp
src/TsimCAT/Backend/: Backend.cpp  Backend.h  CMakeLists.txt  RuntimeConfig.cpp  RuntimeConfig.h  ScreenshotProvider.cpp  ScreenshotProvider.h
src/TsimCAT/Backend/Controllers/: ConveyorController.cpp  ConveyorController.h  GantryController.cpp  GantryController.h  LaserController.cpp  LaserController.h  RobotController.cpp  RobotController.h  RotaryTableController.cpp  RotaryTableController.h
src/TsimCAT/Backend/coroutine/: CMakeLists.txt  Channel.hpp  Context.hpp  Task.hpp  coroutine.hpp  utils.hpp
src/TsimCAT/Backend/network/: CMakeLists.txt  IDriver.hpp
src/TsimCAT/Core/: CMakeLists.txt
src/TsimCAT/Core/Common/: CMakeLists.txt
src/TsimCAT/Core/Coroutines/: CMakeLists.txt  Context.hpp  Task.hpp  coroutine.hpp
src/TsimCAT/Core/Drivers/: CMakeLists.txt
src/TsimCAT/Core/Drivers/Comm/: IDriver.hpp
src/TsimCAT/Core/Drivers/Comm/Raw/: IRawComm.hpp
src/TsimCAT/Core/Drivers/Comm/Symbolic/: ISymbolicComm.hpp
src/TsimCAT/Core/Link/: CMakeLists.txt  IClient.hpp  ILink.hpp  LinkFactory.cpp  LinkFactory.hpp
src/TsimCAT/Core/Link/Raw/: IRawLink.hpp  TcpServer.cpp  TcpServer.hpp
src/TsimCAT/Core/Link/Symbolic/: AdsClient.cpp  AdsClient.hpp  AdsLink.cpp  AdsLink.hpp  ISymbolicClient.hpp  ISymbolicLink.hpp  OpcUaClient.cpp  OpcUaClient.hpp  OpcUaLink.cpp  OpcUaLink.hpp
src/TsimCAT/Core/Logger/: CMakeLists.txt  Logger.cpp  Logger.hpp  TraceLogger.cpp  TraceLogger.hpp
src/TsimCAT/Core/Simulators/: CMakeLists.txt  CellFlowOrchestrator.cpp  CellFlowOrchestrator.hpp  ConveyorSimulator.cpp  ConveyorSimulator.hpp  GantrySimulator.cpp  GantrySimulator.hpp  ISimulator.hpp  Kinematics.cpp  LaserSimulator.cpp  LaserSimulator.hpp  Part.hpp  RobotSimulator.cpp  RobotSimulator.hpp  RotaryTableSimulator.cpp  RotaryTableSimulator.hpp  SimpleCellCoordinator.cpp  SimpleCellCoordinator.hpp  Simulators.cpp
src/TsimCAT/Core/Simulators/Components/: IComponent.hpp
src/TsimCAT/Core/Utils/: CMakeLists.txt  memory_utils.hpp  queue_utils.hpp  utils.hpp
src/TsimCAT/UI/: CMakeLists.txt  Main.qml
src/TsimCAT/UI/controls/: CameraModel.qml  ConveyorModel.qml  FenceModel.qml  GantryModel.qml  GripperModel.qml  LaserModel.qml  NavigationSidebar.qml  PartModel.qml  Plant3DView.qml  Robot3DView.qml  RobotModel.qml  RotaryTableModel.qml  StationFrameModel.qml  StationModel.qml
src/TsimCAT/UI/icons/: AnalyticsIcon.qml  CameraIcon.qml  GantryIcon.qml  LaserIcon.qml
src/TsimCAT/UI/subscreens/: CameraStatus.qml  GantryStatus.qml  LaserStatus.qml  PlantOverview.qml  ProcessData.qml  ProcessData.qml.bak  RobotStatus.qml
src/app/: CMakeLists.txt  main.cpp
src/backend/: Backend.cpp  Backend.h  CMakeLists.txt
src/frontend/: CMakeLists.txt  Main.qml
src/model/: Conveyor.hpp  Robot.hpp
src/sim/: ConveyorSimulator.hpp  PLCManager.hpp  RobotSimulator.hpp
src/ui/: CellNavigator.hpp  MainWindow.hpp
src/ui/pages/: ConveyorPage.hpp  OverviewPage.hpp  RobotPage.hpp  SafetyPage.hpp  SensorsPage.hpp
tests/: CMakeLists.txt  SimulatorTests.cpp
tlink/: CMakeLists.txt
tlink/drivers/ads/: CMakeLists.txt
tlink/drivers/ads/include/tlink/drivers/: OpcUa.hpp  ads.hpp
tlink/drivers/ads/src/: OpcUa.cpp  ads.cpp
tlink/drivers/opcua/: CMakeLists.txt
tlink/drivers/opcua/include/tlink/drivers/: OpcUa.hpp
tlink/drivers/opcua/src/: OpcUa.cpp
tlink/include/tlink/: Result.hpp  Subscription.hpp  driver.hpp  tlink.hpp
tlink/include/tlink/core/: channel.hpp  context.hpp  result.hpp  task.hpp
tlink/include/tlink/coroutine/: Channel.hpp  Context.hpp  Task.hpp  coroutine.hpp  utils.hpp
tlink/include/tlink/log/: Logger.hpp  format.hpp  formatter.hpp
